# notify_bot

./: .env.example  .gitignore  README.md  notify_cli.py  pyproject.toml
notify_bot/: api.py  bot.py  config.py  formatting.py  main.py
