[project]
name = "ntfy"
version = "0.1.0"
description = "Minimal Telegram notification bot with HTTP API and CLI"
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.10,<4",
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.30,<1",
    "pydantic>=2.0,<3",
    "python-dotenv>=1.0,<2",
    "httpx>=0.27,<1",
]

[project.scripts]
ntfy = "notify_cli:main"
ntfy-server = "notify_bot.main:run"

[tool.setuptools]
py-modules = ["notify_cli"]
packages = ["notify_bot"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
